--- a/frontend/src/app/features/trucks/components/trucks-list/trucks-list.component.html
+++ b/frontend/src/app/features/trucks/components/trucks-list/trucks-list.component.html
@@ -3,7 +3,7 @@
   <div class="main-content" [class.sidebar-collapsed]="sidebarCollapsed">
     <header class="dashboard-header">
       <div class="header-left">
-        <h1>{{ 'TRUCKS.LIST.HEADER_TITLE' | translate }}</h1>
+        <h1>{{ 'SIDEBAR.MENU.TRUCKS_CONTROL' | translate }}</h1>
       </div>
       <div class="header-right">
         <span class="welcome-text">{{ 'DASHBOARD.WELCOME' | translate }}, Usuario</span>
@@ -16,7 +16,7 @@
     <main class="trucks-main">
       <app-card>
         <div class="header-actions">
-          <h2 class="card-title">{{ 'TRUCKS.LIST.TITLE' | translate }}</h2>
+          <!-- <h2 class="card-title">{{ 'TRUCKS.LIST.TITLE' | translate }}</h2> -->
           <app-button (click)="createNewTruck()" class="btn-primary">
             {{ 'TRUCKS.LIST.CREATE_NEW' | translate }}
           </app-button>
