--- a/frontend/src/app/features/trucks/components/trucks-list/trucks-list.component.scss
+++ b/frontend/src/app/features/trucks/components/trucks-list/trucks-list.component.scss
@@ -58,14 +58,22 @@
       margin: 0 !important;
       padding: 0 !important;
     }
+    ::ng-deep .mat-mdc-form-field-infix {
+      padding-top: 6px !important;
+      padding-bottom: 6px !important;
+      min-height: 0 !important;
+      height: 32px !important;
+      display: flex;
+      align-items: center;
+    }
     ::ng-deep .mdc-text-field__input {
-      min-height: 24px !important;
-      height: 24px !important;
-      padding-top: 0 !important;
-      padding-bottom: 0 !important;
-      margin: 0 !important;
-      font-size: 0.92rem;
-      line-height: 1.1;
+      padding-top: 6px !important;
+      padding-bottom: 6px !important;
+      min-height: 28px !important;
+      height: 28px !important;
+      line-height: 1.2;
+      display: flex;
+      align-items: center;
     }
     .custom-input-field .mat-form-field-flex {
       min-height: 32px;
