--- a/frontend/src/app/features/trucks/components/trucks-list/trucks-list.component.scss
+++ b/frontend/src/app/features/trucks/components/trucks-list/trucks-list.component.scss
@@ -32,7 +32,7 @@
   h3 {
     margin: 0 0 1rem 0;
     color: #fff;
-    font-size: 1.25rem;
+    font-size: 16px;
     font-weight: 700;
     background: #545386;
     padding: 0.5rem 1.25rem;
