Ajustes visuales en trucks: espacio lateral, color de icono dinámico, traducciones y corrección de header.

--- a/frontend/src/app/features/trucks/components/truck-control-form/truck-control-form.component.html
+++ b/frontend/src/app/features/trucks/components/truck-control-form/truck-control-form.component.html
@@ -69,7 +69,7 @@
 
     <div class="form-actions">
       <app-button type="submit" variant="primary">{{ 'COMMON.SAVE' | translate }}</app-button>
-      <app-button type="button" variant="secondary" (click)="onCancel()">{{ 'COMMON.CANCEL' | translate }}</app-button>
+      <app-button type="button" variant="primary" (click)="onCancel()">{{ 'COMMON.CANCEL' | translate }}</app-button>
     </div>
   </form>
 </app-card> 
