--- a/frontend/src/app/features/trucks/components/trucks-list/trucks-list.component.html
+++ b/frontend/src/app/features/trucks/components/trucks-list/trucks-list.component.html
@@ -91,8 +91,8 @@
                       <span *ngSwitchCase="'ship_date'">{{ getTruckValue(truck, column.key) | date:'shortDate' }}</span>
                       <span *ngSwitchCase="'deliv_date'">{{ getTruckValue(truck, column.key) | date:'shortDate' }}</span>
                       <span *ngSwitchCase="'update_date'">{{ getTruckValue(truck, column.key) | date:'short' }}</span>
-                      <span *ngSwitchCase="'time_in'">{{ getTruckValue(truck, column.key) | date:'shortTime' }}</span>
-                      <span *ngSwitchCase="'time_out'">{{ getTruckValue(truck, column.key) | date:'shortTime' }}</span>
+                      <span *ngSwitchCase="'time_in'">{{ getTruckValue(truck, column.key) }}</span>
+                      <span *ngSwitchCase="'time_out'">{{ getTruckValue(truck, column.key) }}</span>
                       <span *ngSwitchCase="'qty'">{{ getTruckValue(truck, column.key) | number:'1.0-2' }}</span>
                       <span *ngSwitchCase="'estatus'" class="status-badge" [class]="'status-' + (getTruckValue(truck, column.key)?.toString() || '').toLowerCase()">
                         {{ getTruckValue(truck, column.key) }}
